# ParallelProgrammingLecture

./: .gitignore  .gitmodules  presentation copy.nav  presentation copy.tex  presentation copy.toc  presentation.aux  presentation.out  presentation.tex  presentation.vrb
.github/workflows/: build-examples.yml
examples/: .dockerignore  01_thread_pool_lock_based.cpp  02_lock_free_queue.cpp  03_basic_coroutine.cpp  04_pubsub_synchronous.cpp  05_pubsub_async_threadpool.cpp  06_pubsub_lockfree_rcu.cpp  07_atomic_memory_ordering.cpp  08_onetbb_examples.cpp  09_coroutine_async_io.cpp  10_hybrid_approach.cpp  CMakeLists.txt  DOCKER.md  DOCKER_QUICKSTART.md  Dockerfile  QUICK_REFERENCE.md  README.md  STRINGSTREAM_UPDATE_STATUS.md  coroutine_based_thread_pool.cpp  docker-compose.yml  setup.sh
